--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.4"
+    "mongoose": "^8.9.4",
+    "globals": "^15.9.0",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.8"
   }
 }
