--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "globals": "^15.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
+    "multer": "^1.4.5-lts.2",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
   }
