--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.9.4",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1",
     "tailwindcss": "^3.4.13",
