--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "react-hot-toast": "^2.5.2",
     "socket.io": "^4.8.1",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
